grammars/tree-sitter-prosaic/test/corpus/basics.txt
================
Comments
================

/* this is a comment */

---

(source_file
  (comment))

================
Comment with annotation
================

/* 1. What happened? (facts, not feelings) */

---

(source_file
  (comment
    (annotation)))

================
Block label
================

scan:

---

(source_file
  (block_label_line
    (block_label)))

================
First word is the action verb
================

list what was actually done

---

(source_file
  (statement
    (action_verb)
    (word)
    (word)
    (word)
    (word)))

================
Any word can be the verb
================

frobnicate the widgets

---

(source_file
  (statement
    (action_verb)
    (word)
    (word)))

================
For-each with keyword highlighting
================

for each task in previous_cycle:

---

(source_file
  (statement
    (action_verb)
    (control_keyword)
    (word)
    (word)
    (identifier)))

================
Dot-prefixed file path
================

copy .tasks/TODO.md

---

(source_file
  (statement
    (action_verb)
    (file_path)))

================
Slash file path
================

create src/main.rs

---

(source_file
  (statement
    (action_verb)
    (file_path)))

================
Template variable in path
================

create .cycle/{cycle_id}/plan.md

---

(source_file
  (statement
    (action_verb)
    (file_path)))

================
Operators
================

expected_payoff = likelihood × magnitude

---

(source_file
  (statement
    (action_verb)
    (operator)
    (word)
    (operator)
    (word)))

================
Block label with trailing tokens
================

output:
    ranked opportunity table

---

(source_file
  (block_label_line
    (block_label))
  (statement
    (action_verb)
    (word)
    (word)))
